Code cleanup and modernization: - Removed unreachable and redundant if statements - Fixed potential memory leak by replacing ThreadLocal.set(null) with remove() - Replaced instanceof checks with Class.isInstance() - Modernized list creation using List.of(...) instead of Collections.unmodifiableList(Arrays.asList(...))